# AlbumCoverCheck

./: .gitignore  Cargo.toml  README.md  sample.config.toml
src/: audio.rs  config.rs  main.rs  model.rs  report.rs  scanner.rs  ui.rs
