[package]
name = "album_cover_check"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
csv = "1.4"
lofty = "0.23.2"
mp4ameta = "0.13.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.5"
